--- a/mlcomp/persist/board/frontend/sass/board.scss
+++ b/mlcomp/persist/board/frontend/sass/board.scss
@@ -1,8 +1,23 @@
-@import '~tether/dist/css/tether.css';
-@import '~bootstrap/dist/css/bootstrap.css';
-@import '~font-awesome/css/font-awesome.css';
+@import '~muse-ui/dist/muse-ui.css';
+@import '~muse-ui/dist/theme-carbon.css';
+@import '~material-design-icons/iconfont/material-icons.css';
 
-// ---- Page Layout ----
-.content-wrapper {
-  padding: 10px;
+// ---- Page Reset ----
+/*
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 100%;
+}
+*/
+
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
