--- a/mlcomp/persist/board/templates/skeleton/base.html
+++ b/mlcomp/persist/board/templates/skeleton/base.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="generator" content="{{ __system__.name }} {{ __system__.version }}" />
 
-  <title>{% block title %}{% block subtitle %}{% endblock %} - {{ __system__.name }}{% endblock %}</title>
+  <title>{% block title %}{% block subtitle %}{% endblock %} - ML Board{% endblock %}</title>
 
   <!-- Stylesheets -->
 {% block head_scripts %}
