--- a/mlcomp/persist/board/templates/skeleton/base.html
+++ b/mlcomp/persist/board/templates/skeleton/base.html
@@ -9,10 +9,12 @@
   <title>{% block title %}{% block subtitle %}{% endblock %} - ML Board{% endblock %}</title>
 
   <!-- Stylesheets -->
-{% block head_scripts %}
+{% block stylesheets %}
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bokeh/bokeh-0.12.4.min.css') }}" />
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bokeh/bokeh-widgets-0.12.4.min.css') }}" />
-  <link rel="stylesheet" type="text/css" href="{{ asset_url_for('main/css') }}" />
+  {% block app_stylesheets %}
+  <link rel="stylesheet" type="text/css" href="{{ asset_url_for('board/css') }}" />
+  {% endblock %}
 {% endblock %}
   <script type="text/javascript">
     var __system__ = {{ __system__.to_json() | safe }};
@@ -22,10 +24,12 @@
   {% block body %}<div id="app"></div>{% endblock %}
 
   <!-- Tail scripts -->
-{% block tail_scripts %}
+{% block scripts %}
   <script type="text/javascript" src="{{ url_for('static', filename='bokeh/bokeh-0.12.4.min.js') }}"></script>
   <script type="text/javascript" src="{{ url_for('static', filename='bokeh/bokeh-widgets-0.12.4.min.js') }}"></script>
-  <script type="text/javascript" src="{{ asset_url_for('main/js') }}"></script>
+  {% block app_scripts %}
+  <script type="text/javascript" src="{{ asset_url_for('board/js') }}"></script>
+  {% endblock %}
 {% endblock %}
 </body>
 </html>
