added KaTeX to webpack; remove Bokeh since it is very hard to integrate

--- a/mlcomp/persist/board/frontend/sass/common.scss
+++ b/mlcomp/persist/board/frontend/sass/common.scss
@@ -1,6 +1,7 @@
 @import '~muse-ui/dist/muse-ui.css';
 @import '~muse-ui/dist/theme-carbon.css';
 @import '~material-design-icons/iconfont/material-icons.css';
+@import '~katex/dist/katex.css';
 
 // ---- Page Layout ----
 html, body {
